--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "metalsmith-autoprefixer": "^1.1.0",
     "metalsmith-clean-css": "^2.0.0",
     "metalsmith-collections": "^0.7.0",
+    "metalsmith-html-minifier": "^2.0.0",
     "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-sass": "^1.3.0",
