--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,4 +1,18 @@
 ErrorDocument 404 /404/index.php
 
 RewriteEngine On
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://joeylea.com/$1 [R,L]
 RewriteRule ^portfolio\/(.*.).html$ /portfolio/$1 [R=301]
+
+<IfModule mod_headers.c>
+    # WEEK
+    <FilesMatch "\.(jpg|jpeg|png|gif|swf)$">
+        Header set Cache-Control "max-age=604800, public"
+    </FilesMatch>
+
+    # WEEK
+    <FilesMatch "\.(js|css|swf)$">
+        Header set Cache-Control "max-age=604800"
+    </FilesMatch>
+</IfModule>
